spotted display bug in header so fixed it - search overlapping logo hitbox

--- a/src/components/c-search-bar/style.styl
+++ b/src/components/c-search-bar/style.styl
@@ -9,11 +9,12 @@
 
 .c-search-bar {
   clearfix();
+  span(1/3)
+  float:right;
   padding: 0 0 $spacing*2 0;
   
   &__container {
-    span(1/3);
-    float:right;
+    
   }
 
   input {
